Added rule (id) for each user mention